--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
 	<title>WebFood</title>
 </head>
 <body>
-	<div></div>
+
+	<header>
+		<a href="index.html">WebFood</a>
+
+		<nav>
+			<ul>
+				<li><a href="">Browse Meals</a></li>
+				<li><a href="">My Orders</a></li>
+			</ul>
+		</nav>
+	</header>
 	
       
 	<main></main>
