--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>WebFood</title>
+	
+	<link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
-	<header>
-		<a href="index.html">WebFood</a>
+	<header id="main-header">
+
+		<a href="index.html" id="logo">WebFood</a>
 
 		<nav>
 			<ul>
@@ -16,10 +24,46 @@
 				<li><a href="">My Orders</a></li>
 			</ul>
 		</nav>
+
 	</header>
 	
       
-	<main></main>
+	<main>
+		
+		<h1>Browse Our Delicious Meals</h1>
+
+		<section id="latest-products">
+			<ul>
+				<!-- product 1 -->
+				<li class="food-item">
+					<article>
+						<img src="images/risotto.jpg" alt="Delicious Risstto with tiger prawns">
+
+						<div class="food-item-content">
+							<h2>Risstto with Tiger Prawns</h2>
+							<a href="" class="btn">Add to cart</a>
+						</div>
+					</article>
+				</li>
+
+
+				<!-- product 2 -->
+				<li class="food-item">
+					<article>
+						<img src="images/cheeseburgers.jpg" alt="cheeseburger with fries">
+
+						<div class="food-item-content">
+							<h2>Cheesebugers</h2>
+							<a href="" class="btn">Add to cart</a>
+						</div>
+					</article>
+				</li>
+
+
+			</ul>
+		</section>
+
+	</main>
 
 
 	<footer></footer>
