--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <body>
 
 	<header id="main-header">
-
 		<a href="index.html" id="logo">WebFood</a>
 
 		<nav>
@@ -24,6 +23,12 @@
 				<li><a href="">My Orders</a></li>
 			</ul>
 		</nav>
+
+		<a href="#" class="menu-btn">
+			<span></span>
+			<span></span>
+			<span></span>
+		</a>
 
 	</header>
 	
