--- a/index.html
+++ b/index.html
@@ -23,16 +23,31 @@
 				<li><a href="">My Orders</a></li>
 			</ul>
 		</nav>
-
-		<a href="#" class="menu-btn">
+			<!-- hambuger -->
+		<a href="#side-drawer" class="menu-btn">
 			<span></span>
 			<span></span>
 			<span></span>
 		</a>
-
+		<!-- end hambuger -->
 	</header>
-	
-       
+			<!--  side draw -->
+	<aside id="side-drawer">
+		<header>
+			<a href="#" class="menu-btn">
+				<span></span>
+				<span></span>
+				<span></span>
+			</a>
+		</header>
+		<nav>
+			<ul>
+				<li><a href="">Browse Meals</a></li>
+				<li><a href="">My Orders</a></li>
+			</ul>
+		</nav>
+	</aside>
+       <!--  end of side draw-->
 	<main>
 		
 		<h1>Browse Our Delicious Meals</h1>
